frontend/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');

.App {
  text-align: center;

  height: 100vh;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  background-color: rgb(39, 64, 138);

  font-family: "Poetsen One", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.page {
  height: 80vh;
  width: 40vw;
  border-radius: 2.5%;
  margin-top: 3vh;
  padding: 2vh;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;

  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.484);
  background-color: rgba(240, 248, 255, 0.484);
}

.input-page, .show-page {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

@media screen and (max-width: 710px) {
  .page {
    height: 95vh;
    width: 100vw;
    margin-top: 1vh;
  }
}

.title {
  font-size: 3rem;
  pointer-events: none;
}

.description {
  font-size: 1rem;
}

.form {
  width: 100%;
}

.submit {
}

.form-input {
  margin: 3%;
  
}

.start-btn {
  height: 5vh;
  width: 10vw;

  border-radius: 8px;
  border: 1px solid black;
  background-color: rgba(162, 169, 174, 0.63);

  font-weight: bold;

  text-align: center;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

@media screen and (max-width: 710px) {
  .start-btn {
    height: 10vh;
    width: 20vw;
  }
}

.start-btn:hover {
  cursor: pointer;
  background-color: rgb(110, 110, 123);
}

input {
  height: 4vh;
  width: 50%;
  border-radius: 8px;
  border: 1px solid black;
  margin: 2%;

  background-color: rgba(240, 248, 255, 0.361);

  text-align: center;
}

.logo {
  width: 20%;
}

.wordList {
  text-align: left;
  width: 80%;
}

.goodResult {
  color: rgb(20, 156, 20);
}

.badResult {
  color: rgb(156, 20, 20);
}

